--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login register form</title>
     <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./fontawesome/css/all-fonts.min.css">
 </head>
 <body>
     
