--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="./fontawesome/css/all-fonts.min.css">
 </head>
 <body>
+    <header class="header">
+        <h1 class="header-title">Login register form</h1>
+    </header>
     
+    <div class="form-container">
+        <h2 class="form-title">Login form</h2>
+    </div>
 </body>
 </html>
