Sakht dokmehaye login va register

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     
     <div class="form-container">
         <h2 class="form-title">Login form</h2>
+
+        <div class="header-buttons">
+            <button class="header-btn">Login</button>
+            <button class="header-btn">Register</button>
+
+        </div>
     </div>
 </body>
 </html>
