--- a/index.html
+++ b/index.html
@@ -107,5 +107,11 @@
 
         </div>
     </div>
+
+     <!-- FOOTER -->
+     <footer>
+      Created With ðŸ’™ By
+      <a href="https://instagram.com/soufi_learn">Soufi_Learn</a>
+    </footer>
 </body>
 </html>
