--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
      <!-- FOOTER -->
      <footer>
       Created With ðŸ’™ By
-      <a href="https://instagram.com/soufi_learn">Soufi_Learn</a>
+      <a href="https://instagram.com/fatemeh-khoshnodl">Fatemeh khoshnod</a>
     </footer>
 </body>
 </html>
