--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
      <!-- FOOTER -->
      <footer>
       Created With ðŸ’™ By
-      <a href="https://instagram.com/fatemeh-khoshnodl">Fatemeh khoshnod</a>
+      <a href="https://instagram.com/fatemeh_khoshnodl">Fatemeh khoshnod</a>
     </footer>
+
+    <script src="./main.js"></script>
 </body>
 </html>
