--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
      <!-- FOOTER -->
      <footer>
-      Created With ðŸ’™ By
+      Created With ðŸ By
       <a href="https://instagram.com/fatemeh_khoshnodl">Fatemeh khoshnod</a>
     </footer>
 
