Tag neshan gozari eror email

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
               class="form-input"
               placeholder="Email address"
               /> 
+            <!--alert-text-->
+            <span class="alert-text" id="login-email-alert">
+              Enter valid email baby🙄
+            </span>
             </div>
             <!--PASWORD INPUT-->
             <div class="input-box">
