ezafe kardane span baraye input dovom

--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
               placeholder="Email address"
               /> 
             <!--alert-text-->
-            <span class="alert-text" id="login-email-alert">
-              Enter valid email baby🙄
-            </span>
+            <span class="alert-text" id="login-email-alert">Enter valid email baby🙄</span>
             </div>
             <!--PASWORD INPUT-->
             <div class="input-box">
@@ -49,6 +47,7 @@
                 <span class="eye-btn">
                     <i class="fa fa-eye"></i>
                   </span>
+                  <span class="alert-text" id="login-email-alert">Enter valid email baby🙄</span>
             </div>
             <!--FORGET PASWORD-->
             <a href="#" class="forgot-pass-text">Forgot Password?</a>
