--- a/index.html
+++ b/index.html
@@ -37,16 +37,17 @@
             </div>
             <!--PASWORD INPUT-->
             <div class="input-box">
-                <input
-                type="password"
-                name="password"
-                
-                class="form-input password-input"
-                placeholder="Password"
-                />
-                <span class="eye-btn">
-                    <i class="fa fa-eye"></i>
-                  </span>
+              <div class="Password-box-inner">
+              <input
+              type="password"
+              name="password" 
+              class="form-input password-input"
+              placeholder="Password"
+              />
+              <span class="eye-btn">
+                <i class="fa fa-eye"></i>
+              </span>
+              </div>
                   <span class="alert-text" id="login-email-alert">Enter valid email baby🙄</span>
             </div>
             <!--FORGET PASWORD-->
