Taghir id haye span

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <header class="header">
         <h1 class="header-title">Login register form</h1>
     </header>
-<!--form-->
+                    <!--form-->
     <div class="form-container">
         <h2 class="form-title">Login form</h2>
-<!--button-->
+                        <!--button-->
         <div class="header-buttons">
             <button type="button" class="header-btn login-btn active">Login</button>
             <button type="button" class="header-btn register-btn">Register </button>
         </div>
-<!--FORM-->
+                <!--FORM-->
         <div class="form-wrapper">
-<!--LOGIN FORM-->
+                  <!--LOGIN FORM-->
           <form action="#" class="form login-form active">  
             <div class="input-box">
                <input
@@ -33,7 +33,7 @@
               placeholder="Email address"
               /> 
             <!--alert-text-->
-            <span class="alert-text" id="login-email-alert">Enter valid email baby🙄</span>
+            <span class="alert-text" id="login-email-alert">default🙄</span>
             </div>
             <!--PASWORD INPUT-->
             <div class="input-box">
@@ -48,7 +48,7 @@
                 <i class="fa fa-eye"></i>
               </span>
               </div>
-                  <span class="alert-text" id="login-email-alert">default</span>
+                  <span class="alert-text" id="login-password-alert">default</span>
             </div>
             <!--FORGET PASWORD-->
             <a href="#" class="forgot-pass-text">Forgot Password?</a>
@@ -67,12 +67,11 @@
                 <input
                   type="text"
                   name="email"
-                 
                   autocomplete="off"
                   class="form-input"
                   placeholder="Email Address"
                 />
-                <span class="alert-text" id="login-email-alert">default</span>
+                <span class="alert-text" id="register-email-alert">default</span>
               </div>
                <!-- password input -->
           <div class="input-box">
@@ -80,7 +79,6 @@
             <input
             type="password"
             name="password"
-            
             class="form-input password-input"
             placeholder="Password"
           />
@@ -88,7 +86,7 @@
             <i class="fa fa-eye"></i>
           </span>
            </div>
-            <span class="alert-text" id="login-email-alert">default</span>
+            <span class="alert-text" id="register-password-alert">default</span>
           </div>
            <!-- confirm password input -->
            <div class="input-box">
@@ -105,7 +103,7 @@
             </span>    
             </div>
             <!--alert text-->
-            <span class="alert-text" id="login-email-alert">default</span>
+            <span class="alert-text" id="register-confirm-password-alert">default</span>
           </div>
 
           <button type="submit" class="form-btn">Sign Up</button>
