Id dadan be input login

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                <input
               type="text"
               name="email"
-             
               autocomplete="off"
               class="form-input"
+              id="ligin-email-input"
               placeholder="Email address"
               /> 
             <!--alert-text-->
-            <span class="alert-text" id="login-email-alert">default🙄</span>
+            <span class="alert-text" id="login-email-alert"></span>
             </div>
             <!--PASWORD INPUT-->
             <div class="input-box">
@@ -42,6 +42,7 @@
               type="password"
               name="password" 
               class="form-input password-input"
+              
               placeholder="Password"
               />
               <span class="eye-btn">
