--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               name="email"
               autocomplete="off"
               class="form-input"
-              id="ligin-email-input"
+              id="login-email-input"
               placeholder="Email address"
               /> 
             <!--alert-text-->
