Matn eror baraye login alert

--- a/index.html
+++ b/index.html
@@ -42,14 +42,13 @@
               type="password"
               name="password" 
               class="form-input password-input"
-              
               placeholder="Password"
               />
               <span class="eye-btn">
                 <i class="fa fa-eye"></i>
               </span>
               </div>
-                  <span class="alert-text" id="login-password-alert">default</span>
+                  <span class="alert-text" id="login-password-alert"></span>
             </div>
             <!--FORGET PASWORD-->
             <a href="#" class="forgot-pass-text">Forgot Password?</a>
@@ -104,7 +103,7 @@
             </span>    
             </div>
             <!--alert text-->
-            <span class="alert-text" id="register-confirm-password-alert">default</span>
+            <span class="alert-text" id="register-confirm-password-alert"></span>
           </div>
 
           <button type="submit" class="form-btn">Sign Up</button>
