Id baraye oassword input

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
               type="password"
               name="password" 
               class="form-input password-input"
+              id="login-password-input"
               placeholder="Password"
               />
               <span class="eye-btn">
